@@ -1,7 +1,7 @@
 base  ckgdoku
 author  Myron Turner
 email  turnermm02@shaw.ca
-date 2018-01-02
+date 2018-01-05
 name  ckgdoku
 desc  WYSIWYG plugin for Dokuwiki
 url  https://www.dokuwiki.org/plugin:ckgdoku
